crates/ndc-clickhouse/tests/snapshots/query_builder__complex_columns Parameterized SQL@01_complex_parameters_01_bind.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: parameterized_sql
input_file: crates/ndc-clickhouse/tests/query_builder/complex_columns/01_complex_parameters_01_bind.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("field1" String)))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(groupArray(tuple("_row"."_field_field1"))) AS "_rowset"
    FROM
      (
        SELECT
          "_origin"."ColumnA" AS "_field_field1"
        FROM
          "Schema1"."Table1" AS "_origin"
        WHERE
          (
            "_origin"."ColumnB" = { p0 :Array(Tuple(field1 String, field2 String)) }
            AND "_origin"."ColumnC" = { p1 :Nested(field1 String, field2 String) }
            AND "_origin"."ColumnD" = { p2 :Tuple(child Tuple(id UInt32, name String)) }
            AND "_origin"."ColumnE" = { p3 :Tuple(child Array(Tuple(id UInt32, name String))) }
            AND "_origin"."ColumnF" = { p4 :Tuple(
              child Tuple(
                id UInt32,
                name String,
                toys Nested(id UInt32, name String)
              )
            ) }
            AND "_origin"."ColumnG" = { p5 :Tuple(
              a Nullable(String),
              b Map(String, String),
              c Array(Tuple(a String, b Tuple(String, String))),
              d Tuple(a String, b String)
            ) }
          )
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
