crates/ndc-clickhouse/tests/snapshots/query_builder__star_schema Inlined SQL@01_native_query.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: inlined_sql
input_file: crates/ndc-clickhouse/tests/query_builder/star_schema/01_native_query.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("revenue" UInt64)))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(
        groupArray(tuple("_row"."_field_revenue" AS "revenue")) AS "rows"
      ) AS "_rowset"
    FROM
      (
        SELECT
          "_origin"."revenue" AS "_field_revenue"
        FROM
          (
            SELECT
              sum(LO_EXTENDEDPRICE * LO_DISCOUNT) AS revenue
            FROM
              star.lineorder_flat
            WHERE
              toYear(LO_ORDERDATE) = 1993
              AND LO_DISCOUNT BETWEEN 1 AND 3
              AND LO_QUANTITY < 25
          ) AS "_origin"
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
